[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdwan-probe"
dynamic = ["version"]
description = "Lightweight CLI to probe Cisco Catalyst SD-WAN controllers (DTLS/TLS) without credentials."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Emmanuel Tychon" }]
keywords = ["sd-wan", "cisco", "viptela", "dtls", "networking"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking",
]

dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "cryptography>=42.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/example/sdwan-probe"

[project.scripts]
sdwan-probe = "sdwanprobe.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdwanprobe*"]

[tool.setuptools_scm]
version_file = "sdwanprobe/_version.py"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
